docs: Remove legacy device management documentation and update related links for clarity

--- a/docs/development/backend/plugins.mdx
+++ b/docs/development/backend/plugins.mdx
@@ -444,7 +444,7 @@ class MyPlugin implements Plugin {
 }
 ```
 
-For complete event documentation, see the [Global Event Bus](./events) guide.
+For complete event documentation, see the [Global Event Bus](/development/backend/events) guide.
 
 ### Access to Core Services
 
