--- a/docs/development/backend/satellite-communication.mdx
+++ b/docs/development/backend/satellite-communication.mdx
@@ -475,7 +475,7 @@ sqlite3 services/backend/persistent_data/database/deploystack.db
 
 ## API Documentation
 
-For detailed API endpoints, request/response formats, and authentication patterns, see the [API Specification](../../api-spec) generated from the backend OpenAPI schema.
+For detailed API endpoints, request/response formats, and authentication patterns, see the [API Specification](/development/backend/api) generated from the backend OpenAPI schema.
 
 ## Related Documentation
 
