--- a/docs/development/satellite/architecture.mdx
+++ b/docs/development/satellite/architecture.mdx
@@ -113,7 +113,7 @@ MCP Client                    Satellite
 - `resources/templates/list` - List resource templates (returns empty array)
 - `prompts/list` - List available prompts (returns empty array)
 
-For detailed information about tool discovery and execution, see [Tool Discovery Implementation](./tool-discovery).
+For detailed information about tool discovery and execution, see [Tool Discovery Implementation](/development/satellite/tool-discovery).
 
 **Error Handling:**
 - JSON-RPC 2.0 compliant error responses
@@ -286,7 +286,7 @@ Satellite                    Backend
 - **Error Recovery**: Exponential backoff with maximum 5-minute intervals
 - **3-Second Response Time**: Immediate priority commands enable near real-time responses
 
-For complete implementation details, see [Backend Polling Implementation](./polling).
+For complete implementation details, see [Backend Polling Implementation](/development/satellite/polling).
 
 ## Security Architecture
 
@@ -375,7 +375,7 @@ Configuration → Spawn → Monitor → Health Check → Restart/Terminate
 - **Status Reporting**: Real-time metrics and health
 - **Command Processing**: Execute Backend commands
 
-For detailed information about the polling implementation, see [Backend Polling Implementation](./polling).
+For detailed information about the polling implementation, see [Backend Polling Implementation](/development/satellite/polling).
 
 ### Phase 5: Enterprise Features
 - **OAuth 2.1 Authentication**: Full authentication server
