--- a/docs/development/satellite/mcp-transport.mdx
+++ b/docs/development/satellite/mcp-transport.mdx
@@ -126,7 +126,7 @@ data: {"timestamp": "2025-01-09T13:30:00.000Z"}
 - `tools/list` - List available tools from remote MCP servers
 - `tools/call` - Execute tools on remote MCP servers
 
-For detailed information about tool discovery and execution, see [Tool Discovery Implementation](./tool-discovery).
+For detailed information about tool discovery and execution, see [Tool Discovery Implementation](/development/satellite/tool-discovery).
 
 ### Resources
 - `resources/list` - List available resources (returns empty array)
@@ -246,4 +246,4 @@ All transport protocols generate structured logs with:
 - Error conditions
 - Performance metrics
 
-See [Logging Documentation](./logging) for detailed log format specifications.
+See [Logging Documentation](/development/satellite/logging) for detailed log format specifications.
