--- a/docs/development/satellite/oauth-authentication.mdx
+++ b/docs/development/satellite/oauth-authentication.mdx
@@ -58,7 +58,7 @@ MCP Client                    Satellite                    Backend
 - Team-aware `tools/call` - validates team access before execution
 - Integrates with existing tool discovery and configuration systems
 
-For detailed team isolation implementation, see [Team Isolation Implementation](./team-isolation).
+For detailed team isolation implementation, see [Team Isolation Implementation](/development/satellite/team-isolation).
 
 **Dynamic Client Support:**
 - Supports RFC 7591 dynamically registered clients
