--- a/docs/development/satellite/team-isolation.mdx
+++ b/docs/development/satellite/team-isolation.mdx
@@ -10,7 +10,7 @@ import { Callout } from 'fumadocs-ui/components/callout';
 
 DeployStack Satellite implements OAuth 2.1 Resource Server-based team isolation to provide secure multi-tenant access to MCP servers. This system ensures complete separation of team resources while maintaining a unified MCP client interface.
 
-For OAuth authentication details, see [OAuth Authentication Implementation](./oauth-authentication). For tool discovery mechanics, see [Tool Discovery Implementation](./tool-discovery).
+For OAuth authentication details, see [OAuth Authentication Implementation](/development/satellite/oauth-authentication). For tool discovery mechanics, see [Tool Discovery Implementation](/development/satellite/tool-discovery).
 
 ## Technical Architecture
 
@@ -279,8 +279,8 @@ Team isolation maintains full MCP client compatibility:
 
 ## Related Documentation
 
-- [OAuth Authentication Implementation](./oauth-authentication) - OAuth 2.1 Resource Server details
-- [Tool Discovery Implementation](./tool-discovery) - Tool caching and namespacing mechanics
-- [Satellite Architecture Design](./architecture) - Overall satellite architecture
-- [Backend Communication](./backend-communication) - Backend integration patterns
+- [OAuth Authentication Implementation](/development/satellite/oauth-authentication) - OAuth 2.1 Resource Server details
+- [Tool Discovery Implementation](/development/satellite/tool-discovery) - Tool caching and namespacing mechanics
+- [Satellite Architecture Design](/development/satellite/architecture) - Overall satellite architecture
+- [Backend Communication](/development/satellite/backend-communication) - Backend integration patterns
 - [Backend OAuth2 Server Implementation](/development/backend/oauth2-server) - OAuth server implementation
