--- a/docs/development/satellite/tool-discovery.mdx
+++ b/docs/development/satellite/tool-discovery.mdx
@@ -10,7 +10,7 @@ import { Callout } from 'fumadocs-ui/components/callout';
 
 DeployStack Satellite implements automatic tool discovery from remote HTTP MCP servers, providing dynamic tool availability without manual configuration. This system enables MCP clients to discover and execute tools from external MCP servers through the satellite's proxy layer.
 
-For information about the overall satellite architecture, see [Satellite Architecture Design](./architecture). For details about the MCP transport protocols that expose discovered tools, see [MCP Transport Protocols](./mcp-transport).
+For information about the overall satellite architecture, see [Satellite Architecture Design](/development/satellite/architecture). For details about the MCP transport protocols that expose discovered tools, see [MCP Transport Protocols](/development/satellite/mcp-transport).
 
 ## Technical Overview
 
@@ -170,7 +170,7 @@ Internal Server: "context7-john-R36no6FGoMFEZO9nWJJLT"
 - **Internal Routing**: Uses full server name for team isolation
 - **Uniqueness**: Guaranteed unique names across all servers
 
-For team-based server resolution, see [Team Isolation Implementation](./team-isolation).
+For team-based server resolution, see [Team Isolation Implementation](/development/satellite/team-isolation).
 
 ## SSE Response Processing
 
